# game-engine

./: .clang-format  .clang-tidy  .dockerignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
app/level-editor/: CMakeLists.txt  editor_layer.cpp  editor_layer.h  editor_scene_renderer.cpp  editor_scene_renderer.h  editor_state.h  level_editor.cpp
app/level-editor/conf/: config.ini
app/level-editor/panels/: common_controls.cpp  common_controls.h  editor_camera_panel.cpp  editor_camera_panel.h  panel_base.h  properties_panel.cpp  properties_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h  statistic_panel.cpp  statistic_panel.h  viewport_panel.cpp  viewport_panel.h
examples/: CMakeLists.txt  gui_layer.cpp  gui_layer.h  renderer_2d.cpp  renderer_2d.h  sandbox.cpp  square_layer.cpp  square_layer.h  triangle_layer.cpp  triangle_layer.h
examples/assets/: config.ini
examples/assets/shaders/: flat_color.frag  flat_color.vert  texture.frag  texture.vert
examples/shaders/: pass_through.frag  pass_through.vert  texture.frag  texture.vert
include/ge/: app_properties.h  application.h  core.h  empty_layer.h  ge.h  layer.h  layer_stack.h  log.h  manager.h  non_copyble.h  thread_pool.h
include/ge/core/: asserts.h  begin.h  core.h  hash.h  interface.h  log.h  non_copyable.h  timestamp.h  type_list.h  utils.h
include/ge/debug/: profile.h
include/ge/ecs/: camera_controller_script.h  components.h  entity.h  entity_registry.h  hash.h  scene.h  scene_camera.h  scene_serializer.h  scriptable_entity.h
include/ge/gui/: gui.h
include/ge/imgui/: imgui_layer.h
include/ge/math/: math.h
include/ge/renderer/: buffer_layout.h  buffers.h  colors.h  framebuffer.h  graphics_context.h  ortho_camera_controller.h  orthographic_camera.h  projection_camera.h  render_command.h  renderer.h  renderer_2d.h  renderer_api.h  scene_renderer.h  scene_renderer_base.h  shader.h  shader_program.h  sub_texture.h  texture.h  vertex_array.h  view_projection_camera.h  vp_camera_controller.h
include/ge/window/: dialogs.h  event.h  input.h  key_codes.h  key_event.h  mouse_button_codes.h  mouse_event.h  window.h  window_event.h
src/ge/: CMakeLists.txt  app_properties.cpp  application.cpp  ge.cpp  layer_stack.cpp  log.cpp  manager.cpp  thread_pool.cpp
src/ge/core/: CMakeLists.txt  log.cpp
src/ge/ecs/: CMakeLists.txt  camera_controller_script.cpp  entity.cpp  entity_registry.cpp  scene.cpp  scene_camera.cpp  scene_serializer.cpp
src/ge/gui/: CMakeLists.txt  gui.cpp
src/ge/gui/unix/: CMakeLists.txt  gui.cpp  gui.h
src/ge/imgui/: CMakeLists.txt  imgui_layer.cpp
src/ge/imgui/unix/: CMakeLists.txt  imgui_unix.cpp  imgui_unix.h  platform_imgui.cpp  platform_imgui.h
src/ge/math/: CMakeLists.txt  math.cpp
src/ge/renderer/: CMakeLists.txt  buffer_layout.cpp  buffers.cpp  framebuffer.cpp  graphics_context.cpp  ortho_camera_controller.cpp  orthographic_camera.cpp  projection_camera.cpp  render_command.cpp  renderer.cpp  renderer_2d.cpp  renderer_api.cpp  scene_renderer.cpp  shader.cpp  shader_program.cpp  sub_texture.cpp  texture.cpp  vertex_array.cpp  view_projection_camera.cpp  vp_camera_controller.cpp
src/ge/renderer/opengl/: CMakeLists.txt  buffers.cpp  buffers.h  framebuffer.cpp  framebuffer.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/ge/renderer/unix/: CMakeLists.txt  opengl_context.cpp  opengl_context.h
src/ge/utils/: opengl_utils.h  unix_utils.h
src/ge/window/: CMakeLists.txt  dialogs.cpp  input.cpp  window.cpp
src/ge/window/unix/: CMakeLists.txt  input.cpp  input.h  input_unix.cpp  input_unix.h  unix_utils.h  utils_unix.h  window.cpp  window.h  window_unix.cpp  window_unix.h
tests/: CMakeLists.txt  conftest.py  test_core.cpp  test_examples.py  test_ge_core.cpp  test_ge_window.cpp  test_scene_serializer.cpp  test_window.cpp
tests/data/scene-serializer/: scene.ge
tools/: clang_format.sh
tools/xvfb/: xvfb_daemon_start  xvfb_init
